<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/load_reviews"
        android:title="@string/loadReviews"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/triage"
        android:title="@string/triage"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/show_statistics"
        android:title="@string/show_statistics"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/add_review"
        android:title="@string/add_review"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/delete_all_reviews"
        android:title="@string/delete_all_reviews"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"
        android:enabled="false"
        />
</menu>