<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_load_reviews"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.commercetest.reviewreviews.LoadReviewsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_reviews_msg"/>

    <Button
        android:id="@+id/launchBrowserToDownloadReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_reviews"/>

    <Button
        android:id="@+id/findFileToLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadButtonText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_heading"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/results_of_file_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        />

</LinearLayout>
